appId: org.openeel.app
---

- tapOn:
    id: "school_name"

- inputText: ${SCHOOL_NAME}

- tapOn:
    id: "school_name_text"
    text: ${SCHOOL_NAME}
